# Tennis-Refactoring-Kata

./: .flake8  .gitignore  .pre-commit  Pipfile  README.md  license.txt  pre-commit  requirements.txt  tennis.py  tennis_test.py  tennis_unittest.py
.github/workflows/: labeler.yml  main.yml
R/: .Rbuildignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.Rmd  README.md
R/R/: tennis.R
R/man/: get_score.Rd  tennis_game.Rd  won_point.Rd
R/tests/: testthat.R
R/tests/testthat/: test-golden_master.R  test-tennis.R
abap/: README.md  YY_PAO_TENNIS_GAME.abap
angular/: README.md  angular.json  karma.conf.js  package-lock.json  package.json  references.txt
angular/.run/: Wallaby.run.xml
angular/src/: index.html
angular/src/app/: TennisGame.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  debouncer.service.ts  tennisKataApp.spec.ts
angular/src/test/: attributes.ts  expectedElementAttributes.ts  expectedResults.ts  expectedStyles.ts  selectors.ts  smartSpy.ts  tennisTester.ts  testHelper.ts
c/: .gitignore  CMakeLists.txt  Internationalization.c  Internationalization.h  README.md  TennisGame1.c  TennisGame2.c  TennisGame2.h  TennisGame3.c  TennisGame4.c  TennisGame6.c  TennisTest.c
c_gtest/: CMakeLists.txt  README.txt
c_gtest/src/: CMakeLists.txt  TennisGame.h  TennisGame1.c  TennisGame1.h  TennisGame2.c  TennisGame2.h  TennisGame3.c  TennisGame3.h
c_gtest/test-gtest/: CMakeLists.txt  main.cpp  sample_gtest.cpp  tennis_gtest.cpp
cpp/: .clang-format  .gitignore  CMakeLists.txt  Readme.md  all_tests.cpp  generate_tests.py  gtest_all.cpp  makefile  tennis.cpp  tennis.h  tennis1.cc  tennis2.cc  tennis3.cc  tennis4.cc  tennis6.cc  tennis7.cc
cpp-assert/: .gitignore  CMakeLists.txt  Readme.md  all_tests.cpp  generate_tests.py  makefile  tennis2.cc  tennis4.cc
crystal/: shard.yml
crystal/spec/: Tennis-Refactoring-Kata_spec.cr  spec_helper.cr
crystal/src/: Tennis-Refactoring-Kata.cr
csharp/: .gitignore  README.md  ReadmeCSharp.md  Tennis-Refactoring-Kata.sln  TennisGame1.cs  TennisGame3.cs  TennisTest.cs
csharp/Tennis/: GamePointsDifference.cs  GamePointsThreshold.cs  ITennisGame.cs  Player.cs  PlayerTests.cs  Score.cs  ScoreCalculatorService.cs  ScoreCalculatorServiceTests.cs  Tennis.csproj  TennisGame1.cs  TennisGame1Original.cs  TennisGame2.cs  TennisGame3.cs  TennisGame4.cs  TennisGame5.cs  TennisGame6.cs  TennisGame7.cs  TennisTests.cs  TennisTestsWithMSUnit.cs  TennisTestsWithMSUnitDataDriven.cs  TestData.xls  packages.config
csharp/Tennis.Tests/: Tennis.Tests.csproj  TennisGame1Tests.cs  TennisTests.cs
csharp/Tennis/Properties/: AssemblyInfo.cs
dart/: .gitignore  pubspec.yaml
dart/lib/: TennisGame.dart  TennisGame1.dart  TennisGame2.dart  TennisGame3.dart
dart/test/: tennis_test.dart
erlang/: LICENSE  README.md
erlang/include/: Tennis.hrl  Tennis3.hrl  tennis1.hrl  tennis2.hrl  tennis3.hrl
erlang/src/: Tennis.app.src  Tennis1.erl  Tennis2.erl  Tennis3.erl  TennisTest.erl  tennis1.erl  tennis2.erl  tennis3.erl  tennis_test.erl
gleam/: README.md  gleam.toml  manifest.toml
gleam/src/: tennis_game_3.gleam
gleam/test/: tennis_kata_test.gleam
go/: .gitignore  README.md  TennisGame1.go  Tennis_test.go  go.mod
go/tenniskata/: TennisGame.go  TennisGame2.go  TennisGame3.go  go.mod
groovy/: .gitignore  build.gradle
groovy/gradle/wrapper/: gradle-wrapper.properties
java/: .gitattributes  .gitignore  .project  README.md  TennisGame1.java  pom.xml
java/src/main/java/: Player.java  (+15 more)
javascript/: README.md  TennisGame1.js  TennisGame2.js  TennisGame3.js  TennisGameMorenoNir.js  TennisTest.html  TennisTest.js  package-lock.json  package.json
javascript-jest/: .gitignore  README.md  package-lock.json  package.json  tennis.test.each.js  tennis.test.js  tennis1.js  tennis2.js  tennis3.js  tennis4.js  tennis5.js  tennis6.js  tennis7.js
javascript/__tests__/: TennisTest.js
julia/: Manifest.toml  Project.toml  README.md
julia/src/: Tenniskata.jl  Tenniskata1.jl  Tenniskata2.jl  Tenniskata3.jl
julia/test/: runtests.jl
kotlin/: .gitignore  build.gradle.kts  pom.xml  settings.gradle.kts
objc/Tennis/: TennisGame1.m  TennisGame2.m  TennisGame3.m
objc/TennisTests/: TennisTests.m
ocaml/: .gitignore  Makefile  tennis1.ml  tennis2.ml  tennis3.ml  test.ml
perl/: Tennis.pm  test.pl
php/: .editorconfig  .gitignore  README.md  TennisGame.php  TennisGame1.php  TennisGame2.php  TennisGame3.php  composer.json  ecs.php  ecs.yaml  phpstan.neon  phpunit.xml.dist
php/src/: Player.php  TennisGame.php  TennisGame1.php  TennisGame2.php  TennisGame3.php  TennisGame6.php  TennisGame7.php
php/tests/: TennisGame1Test.php  TennisGame2Test.php  TennisGame3Test.php  TennisGame6Test.php  TennisGame7Test.php  TestMaster.php  TestSuite.php
python/: .gitignore  README.md  pyproject.toml  tennis.py  tennis1.py  tennis2.py  tennis3.py  tennis4.py  tennis5.py  tennis6.py  tennis7.py  tennis_test.py  tennis_unittest.py
ruby/: .gitignore  .project  Gemfile  tennis.rb  tennis_test.rb
rust/src/: lib.rs  tennisgame1.rs  tennisgame2.rs  tennisgame3.rs
rust/tests/: unit.rs
scala/: .gitignore  README.md  build.sbt
swift/: .gitignore  Package.swift
swift/Tennis/: TennisGame.swift  TennisGame1.swift  TennisGame2.swift  TennisGame3.swift  Test Raja.swift
swift/Tennis.xcodeproj/: project.pbxproj
swift/TennisTests/: TennisTests.swift
swift/Tests/TennisTests/: TennisTests.swift
typescript/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
typescript-jest/: .gitignore  jest.config.js  package.json  tsconfig.json
typescript-jest/src/: TennisGame3.ts  TennisGame4.ts  index.ts
typescript-jest/tests/: TennisTest.spec.ts
typescript/src/: TennisGame.ts  TennisGame1.ts  TennisGame2.ts  TennisGame3.ts  TennisGame5.ts  TennisGame6.ts  index.ts
typescript/tests/: TennisTest.test.ts  scores.json  utils.ts
vbnet/: TennisRefactoringKata.sln
vbnet/Tennis/: ITennisGame.vb  Tennis.vbproj  TennisGame1.vb  TennisGame2.vb  TennisGame3.vb
vbnet/Tennis.Tests/: Tennis.Tests.vbproj  TennisTests.vb
(+64 files in other folders)
